--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Feature_Project.Feature_Projek_1"></activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Feature_MyTask.Mytask_actv"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+<!--        <activity android:name=".Feature_Project.Feature_Projek_1"></activity>-->
+<!--        <activity android:name=".MainActivity" />-->
     </application>
 
 </manifest>
