--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,20 +4,29 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Feature_MyTask.Mytask_actv"
-            android:label="@string/app_name">
+        <activity android:name=".Register_Login.ForgotPass" />
+        <activity android:name=".Register_Login.SignUpPage" />
+        <activity android:name=".Register_Login.welcomePage" />
+        <activity android:name=".Register_Login.Loading">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity android:name=".Feature_Project.Feature_Projek_1"></activity>-->
-<!--        <activity android:name=".MainActivity" />-->
+        <activity android:name=".Register_Login.LoginPage" />
+        <activity
+            android:name=".Feature_MyTask.Mytask_actv"
+            android:label="@string/app_name" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
