--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.google.gms:google-services:4.3.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        configurations.matching { it.name == '_internal_aapt2_binary' }.all { config ->
+            config.resolutionStrategy.eachDependency { details ->
+                details.useVersion("3.5.0-alpha03-5252756")
+            }
+        }
     }
 }
 
