--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-firestore:21.3.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:design:29.0.2'
+    implementation 'com.android.support:appcompat-v7:29.1.1'
 
 }
 
