--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:design:29.0.2'
     implementation 'com.android.support:appcompat-v7:29.1.1'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
 }
 
