--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="umn.ac.vorgoprojek">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Feature_Project.Project"></activity>
+        <activity android:name=".Feature_MyTask.AddTask"></activity>
+        <activity android:name=".Feature_Project.Project" />
         <activity android:name=".Register_Login.ForgotPass" />
         <activity android:name=".Register_Login.SignUpPage" />
         <activity android:name=".Register_Login.welcomePage" />
@@ -21,10 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Register_Login.LoginPage" />
-        <activity
-            android:name=".Feature_MyTask.Mytask_actv"
-            android:label="@string/app_name" />
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
