--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,11 @@ dependencies {
     implementation 'com.android.support:design:29.0.2'
     implementation 'com.android.support:appcompat-v7:29.1.1'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.firebaseui:firebase-ui-database:4.0.0'
 }
